--- a/src/components/ToysList.module.css
+++ b/src/components/ToysList.module.css
@@ -49,7 +49,11 @@
 }
 
 .toysList button {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
   width: 70%;
   margin: 0 auto;
   padding: 10px;
