--- a/src/components/ToysListItem.module.css
+++ b/src/components/ToysListItem.module.css
@@ -62,6 +62,15 @@
   background-color: #c3c3c3;
 }
 
+.icon {
+  margin-right: 5px;
+}
+
+.iconWrapper a {
+  display: flex;
+  align-items: center;
+}
+
 @media (max-width: 600px) {
   .toysList {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
